--- a/index.html
+++ b/index.html
@@ -1,349 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Dayview - BlackHat Fabe</title>
-<meta name="description" content="Cyber Security Specialist - Army | BlackHat Fabe" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<style>
-  /* Base resets and neon black theme */
-  @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+<html>
+  <head>
+    <title>My Awesome Website</title>
+  </head>
 
-  html, body {
-    margin: 0; padding: 0; height: 100%; overflow: hidden;
-    background: #000000;
-    color: #00ffff;
-    font-family: 'Share Tech Mono', monospace;
-    user-select: none;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+  <body>
+    <!-- All content goes here -->
+    <div id="all-contents">
+      <nav>
+        <h1>Fabe's Amazing Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
 
-  /* Flickering neon text effect */
-  @keyframes flicker {
-    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-      opacity: 1;
-      text-shadow:
-        0 0 5px #00fff7,
-        0 0 10px #00fff7,
-        0 0 20px #00fff7,
-        0 0 40px #00fff7,
-        0 0 80px #00fff7;
-    }
-    20%, 22%, 24%, 55% {
-      opacity: 0.5;
-      text-shadow: none;
-    }
-  }
+      <main>
 
-  /* Glitch effect for headings */
-  @keyframes glitch {
-    0% {
-      clip: rect(44px, 9999px, 56px, 0);
-      transform: translate(-3px, -3px);
-      opacity: 0.8;
-    }
-    20% {
-      clip: rect(12px, 9999px, 30px, 0);
-      transform: translate(3px, 3px);
-      opacity: 1;
-    }
-    40% {
-      clip: rect(70px, 9999px, 85px, 0);
-      transform: translate(-3px, 3px);
-      opacity: 0.9;
-    }
-    60% {
-      clip: rect(24px, 9999px, 35px, 0);
-      transform: translate(3px, -3px);
-      opacity: 1;
-    }
-    80% {
-      clip: rect(50px, 9999px, 62px, 0);
-      transform: translate(-3px, -3px);
-      opacity: 0.8;
-    }
-    100% {
-      clip: rect(44px, 9999px, 56px, 0);
-      transform: translate(0, 0);
-      opacity: 1;
-    }
-  }
-
-  /* Container centered with black bg and neon border */
-  #container {
-    width: 900px;
-    max-width: 95vw;
-    margin: 5vh auto;
-    padding: 30px;
-    background: #000000dd;
-    border: 2px solid #00ffff;
-    border-radius: 12px;
-    box-shadow:
-      0 0 10px #00ffff,
-      0 0 20px #00ffff,
-      0 0 30px #00ffff;
-    position: relative;
-    overflow: hidden;
-  }
-
-  /* Main heading neon and glitch */
-  h1#dayview {
-    font-size: 4.5rem;
-    color: #00ffff;
-    position: relative;
-    animation: flicker 3s infinite alternate;
-    margin-bottom: 10px;
-    font-weight: 900;
-  }
-
-  /* Glitch layers */
-  h1#dayview::before,
-  h1#dayview::after {
-    content: 'DAYVIEW';
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%;
-    color: #00ffff;
-    background: transparent;
-    overflow: hidden;
-    clip: rect(0, 900px, 0, 0);
-  }
-
-  h1#dayview::before {
-    animation: glitch 2s infinite linear alternate-reverse;
-    left: 2px;
-    text-shadow: -2px 0 #00ffff;
-  }
-
-  h1#dayview::after {
-    animation: glitch 2.5s infinite linear alternate;
-    left: -2px;
-    text-shadow: 2px 0 #00ffff;
-  }
-
-  /* Subtitle text */
-  #subtitle {
-    font-size: 1.5rem;
-    letter-spacing: 0.15em;
-    color: #00b3b3;
-    margin-bottom: 20px;
-  }
-
-  /* Neon glowing bio */
-  #bio {
-    font-size: 1.25rem;
-    line-height: 1.6;
-    color: #00e5ff;
-    text-shadow:
-      0 0 5px #00e5ff,
-      0 0 10px #00e5ff,
-      0 0 20px #00e5ff,
-      0 0 40px #00e5ff;
-    margin-bottom: 30px;
-  }
-
-  /* Link styles with flicker effect */
-  a.link {
-    color: #00ffff;
-    font-weight: 700;
-    text-decoration: none;
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    border: 2px solid #00ffff;
-    border-radius: 8px;
-    box-shadow:
-      0 0 8px #00ffff,
-      0 0 15px #00ffff;
-    transition: all 0.3s ease;
-    animation: flicker 3.5s infinite alternate;
-  }
-
-  a.link:hover,
-  a.link:focus {
-    color: #ffffff;
-    background: #00ffff;
-    box-shadow:
-      0 0 12px #00ffff,
-      0 0 30px #00ffff;
-    text-shadow: none;
-  }
-
-  /* Footer neon text */
-  footer {
-    text-align: center;
-    font-size: 0.9rem;
-    color: #008080cc;
-    padding-top: 20px;
-    letter-spacing: 0.1em;
-    text-shadow:
-      0 0 3px #008080,
-      0 0 5px #008080;
-  }
-
-  /* Pixel rain container */
-  #pixelRain {
-    pointer-events: none;
-    position: fixed;
-    top: 0; left: 0; width: 100vw; height: 100vh;
-    z-index: 9999;
-    overflow: hidden;
-  }
-
-  /* Pixel drop styling */
-  .pixelDrop {
-    position: absolute;
-    width: 3px;
-    height: 3px;
-    background: #00ffff;
-    box-shadow:
-      0 0 3px #00ffff,
-      0 0 6px #00ffff;
-    opacity: 0.7;
-    filter: drop-shadow(0 0 3px #00ffff);
-    animation-timing-function: linear;
-  }
-
-  /* Scanline overlay for retro effect */
-  #scanlines {
-    position: fixed;
-    top: 0; left: 0; width: 100vw; height: 100vh;
-    pointer-events: none;
-    background:
-      repeating-linear-gradient(
-        0deg,
-        rgba(0,255,255,0.05),
-        rgba(0,255,255,0.05) 2px,
-        rgba(0,0,0,0.05) 3px,
-        rgba(0,0,0,0.05) 4px
-      );
-    z-index: 9998;
-    mix-blend-mode: screen;
-  }
-
-  /* Glowing underline hover for navigation */
-  nav a {
-    color: #00ffff;
-    text-decoration: none;
-    margin: 0 15px;
-    font-weight: 600;
-    font-size: 1.1rem;
-    position: relative;
-  }
-  nav a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background: #00ffff;
-    bottom: -5px;
-    left: 0;
-    border-radius: 2px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  nav a:hover::after,
-  nav a:focus::after {
-    opacity: 1;
-  }
-
-</style>
-</head>
-<body>
-  <!-- Pixel rain container -->
-  <div id="pixelRain"></div>
-  <!-- Scanline overlay -->
-  <div id="scanlines"></div>
-
-  <div id="container" role="main" aria-label="BlackHat Fabe personal site">
-    <h1 id="dayview" aria-label="Site Title Dayview">DAYVIEW</h1>
-    <div id="subtitle">BlackHat Fabe - Cyber Security Specialist</div>
-    <p id="bio" aria-live="polite">
-      ⚔️ 17 | Cyber Security Specialist - Army<br />
-      🗡️ Exploit analyst | Antisocial Hacker<br />
-      💻 Building ops, tools, &amp; networks<br />
-      🔍 #OpSec #HackerLife
-    </p>
-
-    <nav aria-label="Main Navigation">
-      <a href="portfolio.html" class="link" tabindex="0">Portfolio</a>
-      <a href="contact.html" class="link" tabindex="0">Contact</a>
-      <a href="https://github.com/blackhatfabe" class="link" target="_blank" rel="noopener noreferrer" tabindex="0">GitHub</a>
-    </nav>
-
-    <section id="warning" style="margin-top:40px; font-weight: 700; color: #ff0000; text-shadow: 0 0 10px #ff0000;">
-      ⚠️ WARNING: You are now under the watchful eyes of <span style="color:#00ffff;">Black-Hat-Fabe</span>. Unauthorized access is futile.
-    </section>
-  </div>
-
-  <script>
-    // Pixel rain hack effect — fills entire screen
-    const pixelRain = document.getElementById('pixelRain');
-    const maxPixels = 300; // Adjust density for performance
-
-    function random(min, max) {
-      return Math.random() * (max - min) + min;
-    }
-
-    class PixelDrop {
-      constructor() {
-        this.el = document.createElement('div');
-        this.el.classList.add('pixelDrop');
-        this.reset();
-        pixelRain.appendChild(this.el);
-      }
-
-      reset() {
-        this.x = random(0, window.innerWidth);
-        this.y = random(-100, -10);
-        this.speed = random(1, 4);
-        this.length = random(5, 15);
-        this.opacity = random(0.3, 0.8);
-        this.el.style.width = '2px';
-        this.el.style.height = this.length + 'px';
-        this.el.style.left = this.x + 'px';
-        this.el.style.top = this.y + 'px';
-        this.el.style.opacity = this.opacity;
-      }
-
-      fall() {
-        this.y += this.speed;
-        if (this.y > window.innerHeight) {
-          this.reset();
-        }
-        this.el.style.top = this.y + 'px';
-      }
-    }
-
-    let pixels = [];
-    for (let i = 0; i < maxPixels; i++) {
-      pixels.push(new PixelDrop());
-    }
-
-    function animate() {
-      pixels.forEach(pixel => pixel.fall());
-      requestAnimationFrame(animate);
-    }
-    animate();
-
-    // Flicker warning message
-    const warning = document.getElementById('warning');
-    setInterval(() => {
-      warning.style.opacity = warning.style.opacity === '1' ? '0.5' : '1';
-    }, 800);
-
-    // Glitch text random flicker on DAYVIEW
-    const dayview = document.getElementById('dayview');
-    setInterval(() => {
-      if (Math.random() < 0.3) {
-        dayview.style.textShadow =
-          '0 0 5px #00ffff, 0 0 10px #00ffff, 0 0 20px #00ffff, 2px 0 30px #00ffff';
-      } else {
-        dayview.style.textShadow = 'none';
-      }
-    }, 500);
-  </script>
-</body>
+      </main>
+    </div>
+  </body>
 </html>
