--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -66,17 +66,17 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
-
+            var positionX = 0;
+			var points = 0;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
-
-
+			function update() { 
+				positionX = positionX + 10;
+           		 moveBoxTo(positionX); // Moves the box to the far right edge.
 			};
 
 			/* 
@@ -85,7 +85,8 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
+				positionX = 0
+				 (0)
 
 			};
 
